FIX BUG and UPDATE TESTCASE